--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "stringify",
   "description": "Browserify middleware to be able to require() text files (including templates) inside of your client-side JavaScript files.",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "main": "./index.js",
   "author": "John Postlethwait <john.postlethwait@gmail.com>",
   "contributors": [
@@ -30,7 +30,7 @@
       "url": "http://opensource.org/licenses/mit-license.php"
     }
   ],
-  "devDependencies": {
+  "dependencies": {
     "through": "~2.3.4"
   }
 }
