--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "contributors": [
     "James Newell <james@digitaledgeit.com.au>",
     "Kevin Ingersoll <kingersoll@gmail.com>",
-    "Livoras <livoras@163.com>"
+    "Livoras <livoras@163.com>",
+    "Sébastien David <sebastien.david.1983@gmail.com>"
   ],
   "website": "http://johnpostlethwait.github.com/stringify/",
   "keywords": [
@@ -32,10 +33,19 @@
     }
   ],
   "dependencies": {
-    "through": "~2.3.4"
+    "html-minifier": "^0.6.9",
+    "through": "^2.3.4"
   },
   "devDependencies": {
-    "mocha": "1.20.1",
-    "should": "4.0.4"
+    "gulp": "^3.8.9",
+    "gulp-if": "^1.2.5",
+    "gulp-istanbul": "^0.3.1",
+    "gulp-jshint": "^1.8.5",
+    "gulp-mocha": "^1.1.1",
+    "gulp-open": "^0.3.0",
+    "jshint-stylish": "^1.0.0",
+    "mocha": "^2.0.1",
+    "should": "^4.1.0",
+    "yargs": "^1.3.2"
   }
 }
