added name author as asked for https://github.com/JohnPostlethwait/stringify/pull/12#issuecomment-63370310

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "James Newell <james@digitaledgeit.com.au>",
     "Kevin Ingersoll <kingersoll@gmail.com>",
     "Livoras <livoras@163.com>",
-    "Sébastien David <sebastien.david.1983@gmail.com>"
+    "Sébastien David <sebastien.david.1983@gmail.com>",
+	"Laurenţiu Macovei <laurentiu.macovei@gmail.com>"
   ],
   "website": "http://johnpostlethwait.github.com/stringify/",
   "keywords": [
