Added the ability to register Stringify with node require.
This allows one to use Stringify with node require server-side or in node scripts.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "Kevin Ingersoll <kingersoll@gmail.com>",
     "Livoras <livoras@163.com>",
     "Sébastien David <sebastien.david.1983@gmail.com>",
-    "Kenneth Skovhus <kenneth.skovhus@gmail.com>"
+    "Kenneth Skovhus <kenneth.skovhus@gmail.com>",
+    "Michaelangelo Jong <mike96angelo@gmail.com>"
   ],
   "website": "http://johnpostlethwait.github.com/stringify/",
   "keywords": [
