--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "stringify",
   "description": "Browserify middleware to be able to require() text files (including templates) inside of your client-side JavaScript files.",
-  "version": "3.2.1",
+  "version": "4.0.0",
   "main": "./index.js",
   "author": "John Postlethwait <john.postlethwait@gmail.com>",
   "contributors": [
@@ -26,24 +26,21 @@
     "url": "git://github.com/JohnPostlethwait/stringify.git"
   },
   "engines": {
-    "node": "<=0.10.26"
+    "node": ">=4.0.0"
   },
   "license": "MIT",
   "dependencies": {
-    "html-minifier": "0.6.9",
-    "stream-spec": "0.3.5",
-    "through": "2.3.4"
+    "html-minifier": "1.1.1",
+    "through2": "2.0.0"
   },
   "devDependencies": {
-    "gulp": "3.8.9",
-    "gulp-if": "1.2.5",
-    "gulp-istanbul": "0.3.1",
-    "gulp-jshint": "1.8.5",
-    "gulp-mocha": "1.1.1",
-    "gulp-open": "0.3.0",
-    "jshint-stylish": "1.0.0",
-    "mocha": "2.0.1",
-    "should": "4.1.0",
-    "yargs": "1.3.2"
+    "gulp": "3.9.0",
+    "gulp-jshint": "2.0.0",
+    "gulp-mocha": "2.2.0",
+    "jshint": "2.9.1",
+    "jshint-stylish": "2.1.0",
+    "mocha": "2.4.5",
+    "should": "8.2.1",
+    "stream-spec": "0.3.6"
   }
 }
