Fix through2 transform and flush functions
The tests were assuming the code was synchronous.  Once
```done()``` was introduced a few tests failed.

As part of a previous commit #fd8e1dc79b, the library "through"
was replaced to "through2".  In order for the parsed value to be
returned as a string the ```{ objectMode: true }``` options object
is needed.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "Livoras <livoras@163.com>",
     "Sébastien David <sebastien.david.1983@gmail.com>",
     "Kenneth Skovhus <kenneth.skovhus@gmail.com>",
-    "Michaelangelo Jong <mike96angelo@gmail.com>"
+    "Michaelangelo Jong <mike96angelo@gmail.com>",
+    "Matthew Dunsdon <matthewdunsdon@gmail.com>"
   ],
   "website": "http://johnpostlethwait.github.com/stringify/",
   "keywords": [
