--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "html-minifier": "1.1.1",
-    "through2": "2.0.0"
+    "browserify-transform-tools": "^1.5.3",
+    "html-minifier": "1.1.1"
   },
   "devDependencies": {
     "gulp": "3.9.0",
@@ -41,7 +41,6 @@
     "jshint": "2.9.1",
     "jshint-stylish": "2.1.0",
     "mocha": "2.4.5",
-    "should": "8.2.1",
-    "stream-spec": "0.3.6"
+    "should": "8.2.1"
   }
 }
