Add exportAsEs6Default option that allows to use exports.default
This is similar to webpack/html-loader option for exactly the same purpose.

When using TypeScript imports, this allows to write

import bla from './bla.html' (won't work without exports.default)
vs 
import * as bla from './bla.html'

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "Sébastien David <sebastien.david.1983@gmail.com>",
     "Kenneth Skovhus <kenneth.skovhus@gmail.com>",
     "Michaelangelo Jong <mike96angelo@gmail.com>",
-    "Matthew Dunsdon <matthewdunsdon@gmail.com>"
+    "Matthew Dunsdon <matthewdunsdon@gmail.com>",
+    "NeverwinterMoon <manni.calavera@gmail.com>"
   ],
   "website": "http://johnpostlethwait.github.com/stringify/",
   "keywords": [
