--- a/package.json
+++ b/package.json
@@ -32,16 +32,16 @@
   },
   "license": "MIT",
   "dependencies": {
-    "browserify-transform-tools": "^1.5.3",
-    "html-minifier": "1.1.1"
+    "browserify-transform-tools": "^1.7.0",
+    "html-minifier": "^3.2.3"
   },
   "devDependencies": {
-    "gulp": "3.9.0",
-    "gulp-jshint": "2.0.0",
-    "gulp-mocha": "2.2.0",
-    "jshint": "2.9.1",
-    "jshint-stylish": "2.1.0",
-    "mocha": "2.4.5",
-    "should": "8.2.1"
+    "gulp": "^3.9.1",
+    "gulp-jshint": "^2.0.4",
+    "gulp-mocha": "^3.0.1",
+    "jshint": "^2.9.4",
+    "jshint-stylish": "^2.2.1",
+    "mocha": "^3.2.0",
+    "should": "^11.1.2"
   }
 }
