--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "Sébastien David <sebastien.david.1983@gmail.com>",
     "Kenneth Skovhus <kenneth.skovhus@gmail.com>",
     "Michaelangelo Jong <mike96angelo@gmail.com>",
-    "Matthew Dunsdon <matthewdunsdon@gmail.com>"
+    "Matthew Dunsdon <matthewdunsdon@gmail.com>",
+    "Ugo Stephant <ugo@poool.fr>"
   ],
   "website": "http://johnpostlethwait.github.com/stringify/",
   "keywords": [
@@ -33,7 +34,7 @@
   "license": "MIT",
   "dependencies": {
     "browserify-transform-tools": "^1.5.3",
-    "html-minifier": "1.1.1"
+    "html-minifier": "3.5.2"
   },
   "devDependencies": {
     "gulp": "3.9.0",
